# vanDouken

./: CMakeLists.txt  README.md  auto.cmake  boost_android_1_53_0.patch  canvascell.h  canvasinitializer.h  canvaswriter.h  flowingcanvas_collector.cpp  flowingcanvas_collector.hpp  flowingcanvas_component.cpp  flowingcanvas_gui.cpp  flowingcanvas_gui.hpp  flowingcanvas_gui_client.hpp  flowingcanvas_simulator.hpp  flowingcanvas_updategroup.cpp  flowingcanvas_updategroup.hpp  flowwidget.h  forceprimitives.h  fpscounter.h  framegrabber.cpp  framegrabber.h  hpx_patchlinks.hpp  hpx_simulator.hpp  hpx_updategroup.hpp  interactivesimulator.h  interactivesimulatorcpu.h  interactivesimulatorgpu.h  main_gui.cpp  resource.qrc
android-qtcreator/: main.cpp  vanDouken.pro
android/sc_image_demo_app/: .classpath  AndroidManifest.xml  build.xml  project.properties
android/sc_image_demo_app/jni/: Android.mk  Application.mk  main.cpp
android/sc_image_demo_app/res/layout/: camera.xml  visualization.xml
android/sc_image_demo_app/res/menu/: visualization.xml
android/sc_image_demo_app/res/values/: strings.xml
android/sc_image_demo_app/src/com/stellar/fragments/: SettingsFragment.java  VisualizationFragment.java
android/sc_image_demo_app/src/com/stellar/hpx/: Constants.java  MainActivity.java
model_test/: debugoutput.h  main.cpp  particle.h  particlewidget.h
old/: collector.hpp  flowingcanvas_gui.cpp  flowingcanvas_simulator.cpp  grid_storage.hpp  main.cpp
old/android/sc_image_demo_app/: .project  Readme.rst  build.xml  local.properties
old/android/sc_image_demo_app/jni/: Application.mk  hpiif.hpp  main_init.cpp
old/android/sc_image_demo_app/res/layout/: activity_main.xml  settings.xml
old/android/sc_image_demo_app/src/com/stellar/adapters/: SectionsPagerAdapter.java
old/android/sc_image_demo_app/src/com/stellar/fragments/: CameraFragment.java  Preview.java
old/android/sc_image_demo_app/src/com/stellar/hpx/: HPXViewPager.java  MainActivity.java  VisualizationRenderer.java
old/android/sc_image_demo_app/src/com/stellar/views/: VisualizationRelativeLayout.java  VisualizationView.java
old/model_test/: CMakeLists.txt  fakesimulator.h  forcesteerer.h  nonhpxfpscounter.h  particle.h  particlewriter.h  starry_night_upper_right.ppm  storage.h
old/serialize/: coord.hpp  supermap.hpp  supervector.hpp
old/server/: collector.hpp  hpx_updategroup.hpp
serialize/: coordbox.hpp
server/: hpx_simulator.hpp  hpx_simulator_impl.hpp  hpx_updategroup_impl.hpp
src/: CMakeLists.txt  camerapreview.cpp  camerapreview.hpp  cell.hpp  component.cpp  config.hpp  controlgui.cpp  controlgui.hpp  controlgui_main.cpp  forcecontrol.cpp  forcecontrol.hpp  forceprimitives.cpp  forceprimitives.hpp  forcesteerer.cpp  forcesteerer.hpp  forceview.cpp  forceview.hpp  forceviwe.hpp  framegrabber.cpp  framegrabber.hpp  gridcollector.cpp  gridcollector.hpp  gridcollectorserver.cpp  gridcollectorserver.hpp  gridprovider.cpp  gridprovider.hpp  gui.cpp  imagesteerer.cpp  imagesteerer.hpp  imagewidget.cpp  imagewidget.hpp  initializer.cpp  initializer.hpp  log.hpp  maincontrol.cpp  maincontrol.hpp  mainwindow.cpp  mainwindow.hpp  mainwindowserver.cpp  mainwindowserver.hpp  (+30 more)
src/boost/gil/extension/io_new/formats/png/: read.hpp
src/boost/gil/extension/numeric/: resample.hpp  sampler.hpp
src/ui/: main.ui  startdialog.ui
